# LUCA

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  run_tests.sh  setup.cfg
examples/: README.md  dual_guide_library_independent.yaml  run.sh
examples/libraries/: library_1.tsv  manifest.json  paired_end_dual_guide_pair_filter.tsv  single_end_dual_guide_pair_filter.tsv
examples/paired_end/dual_guide/filtered/: experiment.json  output.md5
examples/paired_end/dual_guide/filtered_and_unfiltered/: experiment.json  output.md5
examples/paired_end/dual_guide/unfiltered/: data.bam  experiment.json  output.md5
examples/paired_end/library_independent/: data.bam  experiment.json  output.md5
examples/single_end/library_independent/: data.bam  experiment.json  output.md5
scripts/: docker_run_unit_tests.sh  generate_test_data.py  generate_test_library.py
src/luca/: __init__.py  app_info.py  cli.py  cli_utils.py  codec.py  count.py  errors.py  experiment.py  fs.py  input_manifest.py  library.py  library_counts.py  library_independent.py  library_stats.py  main.py  manifest.py  matcher.py  merge.py  path_bundle.py  stats.py  utils.py  writer.py
src/luca/readers/: constants.py  hts.py  main.py  read_file_info.py  read_info.py  read_qc.py  tsv.py  types.py  utils.py
tests/: test_cli_count.py  test_codec.py  test_combinations.py  test_fs.py  test_library.py  test_manifest.py  test_matcher.py  test_read_qc.py  test_readers.py  test_tsv.py  test_utils.py  utils.py
tests/data/: combination_filter_truncated.tsv  dual_guide_single_end.bam  dual_guide_single_end.json  library_1_truncated.tsv  library_2.tsv  library_truncated.tsv  manifest.json  yaml_parser_error.yaml
(+59 files in other folders)
