[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "luca"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    'click==8.2.1',
    'click-option-group==0.5.7',
    'numpy==2.3.1',
    'pydantic==2.11.7',
    'pysam==0.23.3',
    'python-magic==0.4.27',
    'pyyaml==6.0.2'
]

[project.scripts]
luca = "luca.main:main"
