[options]
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    luca = luca.main:main

[metadata]
version = attr: luca.__version__
author = Luca Barbon
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
